# Game_Lab

./: .gitignore  CMakeLists.txt  README.md
engine/include/: collision_manager.hpp  game_object.hpp  log.h  sprite.hpp
engine/src/: collision_manager.cpp  engine.cpp  game_object.cpp  sprite.cpp
game/include/: game_scene.hpp  monster.hpp  player.hpp
game/src/: game_scene.cpp  monster.cpp  player.cpp
src/: main.cpp
